defined DTOs, viewModels and mappers
