# src/viewModels/user.ts
@@ -1,8 +1,11 @@
+import type { UserRole } from '../DTOs';
+
 interface User {
     id?: string | null;
     name?: string | null;
     email?: string | null;
     avatarUrl?: string | null;
+    role?: UserRole | null;
 }
 
 export type {User};
